2000-12-11 21:45 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
    *utils/hbmake/hbmake.prg
       *Fixed an small bug
2000-12-11 21:45 GMT+1 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/tbrowse.prg
     - removed hidden: clause inside class definition (it doesn't work right now)
   * source/rtl/tclass.prg
     - commented out line 255 (gives infinite loop)
   * utils/hbmake/*.prg
     + hbdocdef.ch needs relative path ("..\hbdoc\") to be compiled by gcc system

2000-12-10 17:09 UTC-0800 Brian Hays <bhays@abacuslaw.com>
   * source/rdd/dbfntx/dbfntx1.c
      * More fixes by Alexander
         Now seek is added

2000-12-10 15:50 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
*makefile.bc
 hb_slex.bc
    *Add hbmake to dependencies list
+utils/hbmake
    *hbmake directoy
+utils/hbmake/hbmake.prg
    *Harbour make utility main file
+utils/hbmake/radios.prg
 utils/hbmake/checks.prg
 utils/hbmake/pickarry.prg
 utils/hbmake/pickfile.prg
 utils/hbmake/prb_stak.prg
 utils/hbmake/radios.ch
 utils/hbmake/checks.ch
 utils/hbmake/radiodef.ch
 utils/hbmake/checkdef.ch
    *Utilityes  functions need by hbmake
 *utils/hbmake/fclass1.prg
 utils/hbmake/ft_funcs.prg
 utils/hbmake/ffile1.prg
    Hbdoc File class engine
 *utils/hbmake/makefile
    *makefile for GNu compiler
 utils/hbmake/checks.ch

2000-12-09 14:09 UTC-0800 Brian Hays <bhays@abacuslaw.com>
   * source/rdd/dbfntx/dbfntx1.c
   * include/hbrddntx.h
      Fixes by Alexander

2000-12-08 18:45 GMT+1 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/tbrowse.prg
     ! I've fixed all known (to me) issues with latest TBrowse code.
       ::HitTop/Bottom were set back to .F. if a ::RefreshAll() was issued. This is wrong since only
       movement keys can reset them.
       Issuing a long sequence of K_UP/K_DN (or CTRL_...) resulted on wrong movement of datasource (you could
       even go backward using K_DN :-O)
       You could get an out of bounds moving around inside tbrowse.